cbits/skia_capi/sk_types.h

typedef struct sk_colorspace_primaries_t {
  float fRX;
  float fRY;
  float fGX;
  float fGY;
  float fBX;
  float fBY;
  float fWX;
  float fWY;
} sk_colorspace_primaries_t;
typedef struct sk_colorspace_xyz_t {
  float fM00;
  float fM01;
  float fM02;
  float fM10;
  float fM11;
  float fM12;
  float fM20;
  float fM21;
  float fM22;
} sk_colorspace_xyz_t;
typedef struct sk_colorspace_icc_profile_t sk_colorspace_icc_profile_t;
typedef enum {
  NO_INVERT_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE,
  INVERT_BRIGHTNESS_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE,
  INVERT_LIGHTNESS_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE,
} sk_highcontrastconfig_invertstyle_t;
typedef struct {
  bool fGrayscale;
  sk_highcontrastconfig_invertstyle_t fInvertStyle;
  float fContrast;
} sk_highcontrastconfig_t;
typedef enum {
  ZERO_SK_PNGENCODER_FILTER_FLAGS = 0x00,
  NONE_SK_PNGENCODER_FILTER_FLAGS = 0x08,
  SUB_SK_PNGENCODER_FILTER_FLAGS = 0x10,
  UP_SK_PNGENCODER_FILTER_FLAGS = 0x20,
  AVG_SK_PNGENCODER_FILTER_FLAGS = 0x40,
  PAETH_SK_PNGENCODER_FILTER_FLAGS = 0x80,
  ALL_SK_PNGENCODER_FILTER_FLAGS =
      NONE_SK_PNGENCODER_FILTER_FLAGS | SUB_SK_PNGENCODER_FILTER_FLAGS |
      UP_SK_PNGENCODER_FILTER_FLAGS | AVG_SK_PNGENCODER_FILTER_FLAGS |
      PAETH_SK_PNGENCODER_FILTER_FLAGS,
} sk_pngencoder_filterflags_t;
typedef struct {
  sk_pngencoder_filterflags_t fFilterFlags;
  int fZLibLevel;
  void* fComments;
  const sk_colorspace_icc_profile_t* fICCProfile;
  const char* fICCProfileDescription;
} sk_pngencoder_options_t;