src/Skia/Bindings/Types.hsc


@
typedef struct sk_colorspace_primaries_t
{
  float fRX;
  float fRY;
  float fGX;
  float fGY;
  float fBX;
  float fBY;
  float fWX;
  float fWY;
} sk_colorspace_primaries_t
@
-}
data Sk_colorspace_primaries = Sk_colorspace_primaries
  { fRX :: CFloat -- ^ C field: @"float fRX"@
  , fRY :: CFloat -- ^ C field: @"float fRY"@
  , fGX :: CFloat -- ^ C field: @"float fGX"@
  , fGY :: CFloat -- ^ C field: @"float fGY"@
  , fBX :: CFloat -- ^ C field: @"float fBX"@
  , fBY :: CFloat -- ^ C field: @"float fBY"@
  , fWX :: CFloat -- ^ C field: @"float fWX"@
  , fWY :: CFloat -- ^ C field: @"float fWY"@
  }
instance Foreign.Storable.Offset.Offset "fRX" Sk_colorspace_primaries where
  rawOffset = (#offset sk_colorspace_primaries_t, fRX)
instance Foreign.Storable.Offset.Offset "fRY" Sk_colorspace_primaries where
  rawOffset = (#offset sk_colorspace_primaries_t, fRY)
instance Foreign.Storable.Offset.Offset "fGX" Sk_colorspace_primaries where
  rawOffset = (#offset sk_colorspace_primaries_t, fGX)
instance Foreign.Storable.Offset.Offset "fGY" Sk_colorspace_primaries where
  rawOffset = (#offset sk_colorspace_primaries_t, fGY)
instance Foreign.Storable.Offset.Offset "fBX" Sk_colorspace_primaries where
  rawOffset = (#offset sk_colorspace_primaries_t, fBX)
instance Foreign.Storable.Offset.Offset "fBY" Sk_colorspace_primaries where
  rawOffset = (#offset sk_colorspace_primaries_t, fBY)
instance Foreign.Storable.Offset.Offset "fWX" Sk_colorspace_primaries where
  rawOffset = (#offset sk_colorspace_primaries_t, fWX)
instance Foreign.Storable.Offset.Offset "fWY" Sk_colorspace_primaries where
  rawOffset = (#offset sk_colorspace_primaries_t, fWY)
instance Foreign.Storable.Storable Sk_colorspace_primaries where
  sizeOf _ = (#size sk_colorspace_primaries_t)
  alignment _ = (#alignment sk_colorspace_primaries_t)
  peek p' = do
    fRX <- (#peek sk_colorspace_primaries_t, fRX) p'
    fRY <- (#peek sk_colorspace_primaries_t, fRY) p'
    fGX <- (#peek sk_colorspace_primaries_t, fGX) p'
    fGY <- (#peek sk_colorspace_primaries_t, fGY) p'
    fBX <- (#peek sk_colorspace_primaries_t, fBX) p'
    fBY <- (#peek sk_colorspace_primaries_t, fBY) p'
    fWX <- (#peek sk_colorspace_primaries_t, fWX) p'
    fWY <- (#peek sk_colorspace_primaries_t, fWY) p'
    pure Sk_colorspace_primaries{..}
  poke p' Sk_colorspace_primaries{..} = do
    (#poke sk_colorspace_primaries_t, fRX) p' fRX
    (#poke sk_colorspace_primaries_t, fRY) p' fRY
    (#poke sk_colorspace_primaries_t, fGX) p' fGX
    (#poke sk_colorspace_primaries_t, fGY) p' fGY
    (#poke sk_colorspace_primaries_t, fBX) p' fBX
    (#poke sk_colorspace_primaries_t, fBY) p' fBY
    (#poke sk_colorspace_primaries_t, fWX) p' fWX
    (#poke sk_colorspace_primaries_t, fWY) p' fWY

{- | C struct: @"sk_colorspace_xyz_t"@

@
typedef struct sk_colorspace_xyz_t
{
  float fM00;
  float fM01;
  float fM02;
  float fM10;
  float fM11;
  float fM12;
  float fM20;
  float fM21;
  float fM22;
} sk_colorspace_xyz_t
@
-}
data Sk_colorspace_xyz = Sk_colorspace_xyz
  { fM00 :: CFloat -- ^ C field: @"float fM00"@
  , fM01 :: CFloat -- ^ C field: @"float fM01"@
  , fM02 :: CFloat -- ^ C field: @"float fM02"@
  , fM10 :: CFloat -- ^ C field: @"float fM10"@
  , fM11 :: CFloat -- ^ C field: @"float fM11"@
  , fM12 :: CFloat -- ^ C field: @"float fM12"@
  , fM20 :: CFloat -- ^ C field: @"float fM20"@
  , fM21 :: CFloat -- ^ C field: @"float fM21"@
  , fM22 :: CFloat -- ^ C field: @"float fM22"@
  }
instance Foreign.Storable.Offset.Offset "fM00" Sk_colorspace_xyz where
  rawOffset = (#offset sk_colorspace_xyz_t, fM00)
instance Foreign.Storable.Offset.Offset "fM01" Sk_colorspace_xyz where
  rawOffset = (#offset sk_colorspace_xyz_t, fM01)
instance Foreign.Storable.Offset.Offset "fM02" Sk_colorspace_xyz where
  rawOffset = (#offset sk_colorspace_xyz_t, fM02)
instance Foreign.Storable.Offset.Offset "fM10" Sk_colorspace_xyz where
  rawOffset = (#offset sk_colorspace_xyz_t, fM10)
instance Foreign.Storable.Offset.Offset "fM11" Sk_colorspace_xyz where
  rawOffset = (#offset sk_colorspace_xyz_t, fM11)
instance Foreign.Storable.Offset.Offset "fM12" Sk_colorspace_xyz where
  rawOffset = (#offset sk_colorspace_xyz_t, fM12)
instance Foreign.Storable.Offset.Offset "fM20" Sk_colorspace_xyz where
  rawOffset = (#offset sk_colorspace_xyz_t, fM20)
instance Foreign.Storable.Offset.Offset "fM21" Sk_colorspace_xyz where
  rawOffset = (#offset sk_colorspace_xyz_t, fM21)
instance Foreign.Storable.Offset.Offset "fM22" Sk_colorspace_xyz where
  rawOffset = (#offset sk_colorspace_xyz_t, fM22)
instance Foreign.Storable.Storable Sk_colorspace_xyz where
  sizeOf _ = (#size sk_colorspace_xyz_t)
  alignment _ = (#alignment sk_colorspace_xyz_t)
  peek p' = do
    fM00 <- (#peek sk_colorspace_xyz_t, fM00) p'
    fM01 <- (#peek sk_colorspace_xyz_t, fM01) p'
    fM02 <- (#peek sk_colorspace_xyz_t, fM02) p'
    fM10 <- (#peek sk_colorspace_xyz_t, fM10) p'
    fM11 <- (#peek sk_colorspace_xyz_t, fM11) p'
    fM12 <- (#peek sk_colorspace_xyz_t, fM12) p'
    fM20 <- (#peek sk_colorspace_xyz_t, fM20) p'
    fM21 <- (#peek sk_colorspace_xyz_t, fM21) p'
    fM22 <- (#peek sk_colorspace_xyz_t, fM22) p'
    pure Sk_colorspace_xyz{..}
  poke p' Sk_colorspace_xyz{..} = do
    (#poke sk_colorspace_xyz_t, fM00) p' fM00
    (#poke sk_colorspace_xyz_t, fM01) p' fM01
    (#poke sk_colorspace_xyz_t, fM02) p' fM02
    (#poke sk_colorspace_xyz_t, fM10) p' fM10
    (#poke sk_colorspace_xyz_t, fM11) p' fM11
    (#poke sk_colorspace_xyz_t, fM12) p' fM12
    (#poke sk_colorspace_xyz_t, fM20) p' fM20
    (#poke sk_colorspace_xyz_t, fM21) p' fM21
    (#poke sk_colorspace_xyz_t, fM22) p' fM22

{- | Opaque C struct: @"sk_colorspace_icc_profile_t"@
-}
data Sk_colorspace_icc_profile = Sk_colorspace_icc_profile

{- | C enum: @"sk_highcontrastconfig_invertstyle_t"@

@
typedef enum 
{
  NO_INVERT_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE,
  INVERT_BRIGHTNESS_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE,
  INVERT_LIGHTNESS_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE
} sk_highcontrastconfig_invertstyle_t
@

-}
newtype Sk_highcontrastconfig_invertstyle = Sk_highcontrastconfig_invertstyle (#type sk_highcontrastconfig_invertstyle_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_highcontrastconfig_invertstyle_t"@ value (1/3): @"NO_INVERT_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE"@
pattern NO_INVERT_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE :: Sk_highcontrastconfig_invertstyle
pattern NO_INVERT_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE = (#const NO_INVERT_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE)

-- | C enum @"sk_highcontrastconfig_invertstyle_t"@ value (2/3): @"INVERT_BRIGHTNESS_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE"@
pattern INVERT_BRIGHTNESS_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE :: Sk_highcontrastconfig_invertstyle
pattern INVERT_BRIGHTNESS_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE = (#const INVERT_BRIGHTNESS_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE)

-- | C enum @"sk_highcontrastconfig_invertstyle_t"@ value (3/3): @"INVERT_LIGHTNESS_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE"@
pattern INVERT_LIGHTNESS_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE :: Sk_highcontrastconfig_invertstyle
pattern INVERT_LIGHTNESS_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE = (#const INVERT_LIGHTNESS_SK_HIGH_CONTRAST_CONFIG_INVERT_STYLE)

{- | C struct: @"sk_highcontrastconfig_t"@

@
typedef struct 
{
  _Bool fGrayscale;
  sk_highcontrastconfig_invertstyle_t fInvertStyle;
  float fContrast;
} sk_highcontrastconfig_t
@
-}
data Sk_highcontrastconfig = Sk_highcontrastconfig
  { fGrayscale :: CBool -- ^ C field: @"_Bool fGrayscale"@
  , fInvertStyle :: Sk_highcontrastconfig_invertstyle -- ^ C field: @"sk_highcontrastconfig_invertstyle_t fInvertStyle"@
  , fContrast :: CFloat -- ^ C field: @"float fContrast"@
  }
instance Foreign.Storable.Offset.Offset "fGrayscale" Sk_highcontrastconfig where
  rawOffset = (#offset sk_highcontrastconfig_t, fGrayscale)
instance Foreign.Storable.Offset.Offset "fInvertStyle" Sk_highcontrastconfig where
  rawOffset = (#offset sk_highcontrastconfig_t, fInvertStyle)
instance Foreign.Storable.Offset.Offset "fContrast" Sk_highcontrastconfig where
  rawOffset = (#offset sk_highcontrastconfig_t, fContrast)
instance Foreign.Storable.Storable Sk_highcontrastconfig where
  sizeOf _ = (#size sk_highcontrastconfig_t)
  alignment _ = (#alignment sk_highcontrastconfig_t)
  peek p' = do
    fGrayscale <- (#peek sk_highcontrastconfig_t, fGrayscale) p'
    fInvertStyle <- (#peek sk_highcontrastconfig_t, fInvertStyle) p'
    fContrast <- (#peek sk_highcontrastconfig_t, fContrast) p'
    pure Sk_highcontrastconfig{..}
  poke p' Sk_highcontrastconfig{..} = do
    (#poke sk_highcontrastconfig_t, fGrayscale) p' fGrayscale
    (#poke sk_highcontrastconfig_t, fInvertStyle) p' fInvertStyle
    (#poke sk_highcontrastconfig_t, fContrast) p' fContrast

{- | C enum: @"sk_pngencoder_filterflags_t"@

@
typedef enum 
{
  ZERO_SK_PNGENCODER_FILTER_FLAGS = 0x00,
  NONE_SK_PNGENCODER_FILTER_FLAGS = 0x08,
  SUB_SK_PNGENCODER_FILTER_FLAGS = 0x10,
  UP_SK_PNGENCODER_FILTER_FLAGS = 0x20,
  AVG_SK_PNGENCODER_FILTER_FLAGS = 0x40,
  PAETH_SK_PNGENCODER_FILTER_FLAGS = 0x80,
  ALL_SK_PNGENCODER_FILTER_FLAGS = (((NONE_SK_PNGENCODER_FILTER_FLAGS | SUB_SK_PNGENCODER_FILTER_FLAGS) | UP_SK_PNGENCODER_FILTER_FLAGS) | AVG_SK_PNGENCODER_FILTER_FLAGS) | PAETH_SK_PNGENCODER_FILTER_FLAGS
} sk_pngencoder_filterflags_t
@

-}
newtype Sk_pngencoder_filterflags = Sk_pngencoder_filterflags (#type sk_pngencoder_filterflags_t)
  deriving stock (Show, Eq, Ord)
  deriving newtype (Num, Bits, Storable)

-- | C enum @"sk_pngencoder_filterflags_t"@ value (1/7): @"ZERO_SK_PNGENCODER_FILTER_FLAGS"@
pattern ZERO_SK_PNGENCODER_FILTER_FLAGS :: Sk_pngencoder_filterflags
pattern ZERO_SK_PNGENCODER_FILTER_FLAGS = (#const ZERO_SK_PNGENCODER_FILTER_FLAGS)

-- | C enum @"sk_pngencoder_filterflags_t"@ value (2/7): @"NONE_SK_PNGENCODER_FILTER_FLAGS"@
pattern NONE_SK_PNGENCODER_FILTER_FLAGS :: Sk_pngencoder_filterflags
pattern NONE_SK_PNGENCODER_FILTER_FLAGS = (#const NONE_SK_PNGENCODER_FILTER_FLAGS)

-- | C enum @"sk_pngencoder_filterflags_t"@ value (3/7): @"SUB_SK_PNGENCODER_FILTER_FLAGS"@
pattern SUB_SK_PNGENCODER_FILTER_FLAGS :: Sk_pngencoder_filterflags
pattern SUB_SK_PNGENCODER_FILTER_FLAGS = (#const SUB_SK_PNGENCODER_FILTER_FLAGS)

-- | C enum @"sk_pngencoder_filterflags_t"@ value (4/7): @"UP_SK_PNGENCODER_FILTER_FLAGS"@
pattern UP_SK_PNGENCODER_FILTER_FLAGS :: Sk_pngencoder_filterflags
pattern UP_SK_PNGENCODER_FILTER_FLAGS = (#const UP_SK_PNGENCODER_FILTER_FLAGS)

-- | C enum @"sk_pngencoder_filterflags_t"@ value (5/7): @"AVG_SK_PNGENCODER_FILTER_FLAGS"@
pattern AVG_SK_PNGENCODER_FILTER_FLAGS :: Sk_pngencoder_filterflags
pattern AVG_SK_PNGENCODER_FILTER_FLAGS = (#const AVG_SK_PNGENCODER_FILTER_FLAGS)

-- | C enum @"sk_pngencoder_filterflags_t"@ value (6/7): @"PAETH_SK_PNGENCODER_FILTER_FLAGS"@
pattern PAETH_SK_PNGENCODER_FILTER_FLAGS :: Sk_pngencoder_filterflags
pattern PAETH_SK_PNGENCODER_FILTER_FLAGS = (#const PAETH_SK_PNGENCODER_FILTER_FLAGS)

-- | C enum @"sk_pngencoder_filterflags_t"@ value (7/7): @"ALL_SK_PNGENCODER_FILTER_FLAGS"@
pattern ALL_SK_PNGENCODER_FILTER_FLAGS :: Sk_pngencoder_filterflags
pattern ALL_SK_PNGENCODER_FILTER_FLAGS = (#const ALL_SK_PNGENCODER_FILTER_FLAGS)

{- | C struct: @"sk_pngencoder_options_t"@
